--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "couchdb-bootstrap",
+  "version":"0.0.1",
   "description": "Bootstrap projects: configure CouchDB, setup security, deploy ddocs and create users.",
   "main": "index.js",
   "bin": {
